reverse(content): fixed issue where main content couldn't scroll to bottom on mobile and would be cut off

--- a/css/src/_skeleton.scss
+++ b/css/src/_skeleton.scss
@@ -549,7 +549,14 @@ body {
 		float: left;
 		width: 100%;
 		height: 100%;
+		flex: 1 1 auto;
+		display: flex;
+		flex-direction: column;
 		@extend %skeleton_mainContentWidth;
+		.main-content {
+			flex-grow: 1;
+			overflow: auto;
+		}
 	}
 
 	//--page toolbar
